--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 description = "Load/save functionality for 3d applications."
 license = "MIT"
 readme = "README.md"
-repository = "https://github.com/asny/three-d"
+repository = "https://github.com/asny/three-d-io"
 categories = ["graphics", "rendering", "visualization", "webassembly"]
 keywords = ["3d", "gamedev", "graphics", "wasm"]
 exclude = [".gitignore"]
@@ -22,12 +22,12 @@ obj-io = ["wavefront_obj", "image-io"]
 gltf-io = ["gltf", "image-io"]
 
 [dependencies]
-three-d = { path="../three-d", default-features = false }
+three-d = "0.11"
 log = "0.4"
 thiserror = "1.0"
-reqwest = "0.11"
+reqwest = {version = "0.11", optional = true }
 serde = { version = "1.0", features = ["derive"], optional = true }
-gltf = { version = "0.16", features = ["utils"], optional = true }
+gltf = { version = "1.0", features = ["utils"], optional = true }
 wavefront_obj = { version = "10.0", optional = true }
 image = { version = "0.23", optional = true, default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]}
 
