--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,23 +16,17 @@ all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
 
 [features]
-default = ["obj-io", "gltf-io", "image-io"]
-image-io = ["image"]
-obj-io = ["wavefront_obj", "image-io"]
-gltf-io = ["gltf", "image-io"]
+default = []
 
 [dependencies]
 three-d = "0.11"
-log = "0.4"
 thiserror = "1.0"
 reqwest = {version = "0.11", optional = true }
-serde = { version = "1.0", features = ["derive"], optional = true }
 gltf = { version = "1.0", features = ["utils"], optional = true }
 wavefront_obj = { version = "10.0", optional = true }
 image = { version = "0.23", optional = true, default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]}
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 js-sys = "0.3"
-wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
+wasm-bindgen = { version = "0.2" }
 wasm-bindgen-futures = "0.4"
-serde = { version = "1.0", features = ["derive"] }
