--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
 
 [features]
-default = ["img", "mesh", "vol"]
+default = ["img", "mesh", "vol", "reqwest"]
 # Image formats
 img = ["jpeg", "png"]
 jpeg = ["image/jpeg"]
