--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,9 +35,9 @@ cgmath = "0.18"
 half = {version="1.8", features=["std", "num-traits", "zerocopy"]}
 thiserror = "1.0"
 reqwest = {version = "0.11", optional = true }
-gltf = { version = "1.0", features = ["utils"], optional = true }
+gltf = { version = "1.0", optional = true }
 wavefront_obj = { version = "10.0", optional = true }
-image = { version = "0.23", optional = true, default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]}
+image = { version = "0.23", optional = true, default-features = false}
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 js-sys = "0.3"
