--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,16 +16,16 @@ all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
 
 [features]
-default = ["texture2d", "tri-mesh", "vol"]
+default = ["image"]
+
 https = ["reqwest"]
 
-texture2d = ["jpeg", "png", "dds", "hdr"]
-jpeg = ["image/jpeg"]
-png = ["image/png"]
-dds = ["image/dds"]
 hdr = ["image/hdr"]
+tiff = ["image/tiff"]
+tga = ["image/tga"]
+gif = ["image/gif"]
+bmp = ["image/bmp"]
 
-tri-mesh = ["obj", "gltf"]
 obj = ["wavefront_obj"]
 
 vol = []
@@ -37,7 +37,7 @@ thiserror = "1.0"
 reqwest = {version = "0.11", optional = true }
 gltf = { version = "1.0", optional = true }
 wavefront_obj = { version = "10.0", optional = true }
-image = { version = "0.23", optional = true, default-features = false}
+image = { version = "0.23", optional = true, default-features = false, features = ["png", "jpeg"]}
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 js-sys = "0.3"
