--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,5 @@ wavefront_obj = { version = "10.0", optional = true }
 image = { version = "0.23", optional = true, default-features = false, features = ["png", "jpeg"]}
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-js-sys = "0.3"
-wasm-bindgen = { version = "0.2" }
 wasm-bindgen-futures = "0.4"
+web-sys = { version = "0.3", features = ['Document'] }
