--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,12 @@ all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
 
 [features]
-default = ["image"]
+default = ["png", "jpeg"]
 
 https = ["reqwest"]
 
+png = ["image/png"]
+jpeg = ["image/jpeg"]
 hdr = ["image/hdr"]
 tiff = ["image/tiff"]
 tga = ["image/tga"]
@@ -37,7 +39,7 @@ thiserror = "1.0"
 reqwest = {version = "0.11", optional = true }
 gltf = { version = "1.0", optional = true }
 wavefront_obj = { version = "10.0", optional = true }
-image = { version = "0.23", optional = true, default-features = false, features = ["png", "jpeg"]}
+image = { version = "0.23", optional = true, default-features = false}
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen-futures = "0.4"
