--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -29,6 +29,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: check
+          args: --all-features
 
       - name: Rustfmt
         uses: actions-rs/cargo@v1
@@ -40,6 +41,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: test
+          args: --all-features
 
   web:
     runs-on: ubuntu-latest
@@ -57,7 +59,7 @@ jobs:
         run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
 
       - name: Build
-        run: wasm-pack build --target web --out-name web --dev
+        run: wasm-pack build --target web --out-name web --dev --all-features
 
   cargo-deny:
     runs-on: ubuntu-latest
