--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ description = "Load/save functionality for 3d applications."
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/asny/three-d-asset"
-categories = ["graphics", "rendering", "visualization", "webassembly"]
-keywords = ["3d", "gamedev", "graphics", "wasm"]
+categories = ["parsing", "encoding", "game-development", "graphics", "rendering"]
+keywords = ["3d", "gamedev", "asset", "loading"]
 exclude = ["/test_data", ".gitignore"]
 
 [lib]
