--- a/deny.toml
+++ b/deny.toml
@@ -21,15 +21,12 @@ wildcards = "allow"        # at least until https://github.com/EmbarkStudios/car
 deny = []
 
 skip = [
-    { name = "num-rational" },              # gltf uses an old version
-    { name = "jpeg-decoder" },              # gltf uses an old version
-    { name = "png" },              # gltf uses an old version
-    { name = "deflate" },              # gltf uses an old version
-    { name = "image" },              # gltf uses an old version
     { name = "base64" },              # gltf uses an old version
     { name = "miniz_oxide" },         # image crate depends on an old version
 ]
-skip-tree = []
+skip-tree = [
+    { name = "image" },              # gltf uses an old version
+]
 
 
 [licenses]
@@ -48,3 +45,7 @@ allow = [
     # "OpenSSL",      # https://www.openssl.org/source/license.html
     "Zlib", # https://tldrlegal.com/license/zlib-libpng-license-(zlib)
 ]
+
+[sources]
+unknown-registry = "deny"
+unknown-git = "deny"
