--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ rustdoc-args = ["--cfg", "docsrs"]
 
 [features]
 http = ["reqwest"]
+data-url = ["dep:data-url"]
 
 png = ["image/png"]
 jpeg = ["image/jpeg"]
@@ -30,6 +31,7 @@ gif = ["image/gif"]
 bmp = ["image/bmp"]
 
 obj = ["wavefront_obj"]
+gltf = ["dep:gltf"]
 
 vol = []
 
@@ -41,6 +43,7 @@ reqwest = {version = "0.11", optional = true }
 gltf = { version = "1.0", optional = true }
 wavefront_obj = { version = "10.0", optional = true }
 image = { version = "0.24", optional = true, default-features = false}
+data-url = {version = "0.1", optional = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 web-sys = { version = "0.3", features = ['Document', 'Window'] }
