--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,11 +42,11 @@ cgmath = "0.18"
 half = {version="2", features=["std", "num-traits", "zerocopy"]}
 thiserror = "1"
 reqwest = {version = "0.11", optional = true }
-gltf = { version = "1", optional = true }
+gltf = { version = "1", optional = true, features=["KHR_materials_ior", "KHR_materials_transmission"] }
 wavefront_obj = { version = "10", optional = true }
 image = { version = "0.24", optional = true, default-features = false}
 pcd-rs = { version = "0.10", optional = true, features = ["derive"] }
-data-url = {version = "0.1", optional = true }
+data-url = {version = "0.2", optional = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 web-sys = { version = "0.3", features = ['Document', 'Window'] }
