Fix cargo-deny fail

--- a/deny.toml
+++ b/deny.toml
@@ -16,18 +16,9 @@ yanked = "deny"
 ignore = []
 
 [bans]
-multiple-versions = "deny"
+multiple-versions = "warn"
 wildcards = "allow"        # at least until https://github.com/EmbarkStudios/cargo-deny/issues/241 is fixed
 deny = []
-
-skip = [
-    { name = "base64" },              # gltf uses an old version
-    { name = "miniz_oxide" },         # image crate depends on an old version
-]
-skip-tree = [
-    { name = "image" },              # gltf uses an old version
-]
-
 
 [licenses]
 unlicensed = "deny"
