--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,6 +1,13 @@
 name: build
 
-on: [ push, pull_request ]
+on:
+  push:
+    branches:
+      - main
+      - 0.*
+  pull_request:
+    branches:
+      - main
 
 env:
   CARGO_TERM_COLOR: always
@@ -11,8 +18,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ ubuntu-latest, windows-latest, macos-latest ]
-        rust: [ stable, nightly ]
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        rust: [stable, nightly]
 
     steps:
       - uses: actions/checkout@v2
