--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,9 +37,11 @@ pcd = ["pcd-rs"]
 
 vol = []
 
+serde-core = []
+
 [dependencies]
-cgmath = "0.18"
-half = {version="2", features=["std", "num-traits", "zerocopy"]}
+cgmath = { version = "0.18", features = ["serde"] }
+half = {version="2", features=["std", "num-traits", "zerocopy","serde"]}
 thiserror = "1"
 reqwest = {version = "0.11", optional = true }
 gltf = { version = "1", optional = true, features=["KHR_materials_ior", "KHR_materials_transmission"] }
@@ -47,6 +49,8 @@ wavefront_obj = { version = "10", optional = true }
 image = { version = "0.24", optional = true, default-features = false}
 pcd-rs = { version = "0.10", optional = true, features = ["derive"] }
 data-url = {version = "0.2", optional = true }
+
+serde = {version= "1" ,features = ["derive","rc"]}
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 web-sys = { version = "0.3", features = ['Document', 'Window'] }
