fixed namespace collision

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,9 +3,8 @@
 	"tasks": [
 		{
 			"type": "cargo",
-			"command": "build",
+			"command": "clippy",
 			"args": [
-				"--release"
 			],
 			"problemMatcher": [
 				"$rustc",
