--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,7 @@ resvg = { version = "0.44", optional = true }
 pcd-rs = { version = "0.12", optional = true, features = ["derive"] }
 data-url = {version = "0.3", optional = true }
 serde = {version= "1", optional = true, features = ["derive", "rc"] }
+dyn-clone = { version = "1.0" }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 web-sys = { version = "0.3", features = ['Document', 'Window'] }
