--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,12 +41,13 @@ pcd = ["pcd-rs"]
 
 vol = []
 
-serde = ["dep:serde", "half/serde", "cgmath/serde"]
+serde = ["dep:serde", "dep:typetag", "half/serde", "cgmath/serde"]
 
 [dependencies]
 cgmath = "0.18"
 half = {version="2", features=["std", "num-traits", "zerocopy"]}
 thiserror = "2"
+dyn-clone = { version = "1.0" }
 reqwest = {version = "0.12", optional = true, default-features = false }
 gltf = { version = "1", optional = true, features=["KHR_materials_ior", "KHR_materials_transmission"] }
 wavefront_obj = { version = "10", optional = true }
@@ -56,7 +57,7 @@ resvg = { version = "0.44", optional = true }
 pcd-rs = { version = "0.12", optional = true, features = ["derive"] }
 data-url = {version = "0.3", optional = true }
 serde = {version= "1", optional = true, features = ["derive", "rc"] }
-dyn-clone = { version = "1.0" }
+typetag = { version = "0.2", optional = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 web-sys = { version = "0.3", features = ['Document', 'Window'] }
