--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ svg = ["dep:resvg"]
 obj = ["wavefront_obj"]
 gltf = ["dep:gltf"]
 stl = ["dep:stl_io"]
+3mf = ["dep:lib3mf"]
 
 pcd = ["pcd-rs"]
 
@@ -51,6 +52,7 @@ reqwest = {version = "0.12", optional = true, default-features = false }
 gltf = { version = "1", optional = true, features=["KHR_materials_ior", "KHR_materials_transmission"] }
 wavefront_obj = { version = "11.0", optional = true }
 stl_io = { version = "0.8", optional = true }
+lib3mf = { version = "0.1", optional = true, default-features = false }
 image = { version = "0.25", optional = true, default-features = false}
 resvg = { version = "0.44", optional = true }
 pcd-rs = { version = "0.12", optional = true, features = ["derive"] }
