--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,7 +49,7 @@ cgmath = "0.18"
 half = {version="2", features=["std", "num-traits", "zerocopy"]}
 thiserror = "2"
 reqwest = {version = "0.12", optional = true, default-features = false }
-gltf = { git="https://github.com/gltf-rs/gltf", rev="a29fb756fd91913e3b6452036cdbe65a0932ac20", optional = true, features=["KHR_materials_ior", "KHR_materials_transmission"] }
+gltf = { version = "1", optional = true, features=["KHR_materials_ior", "KHR_materials_transmission"] }
 wavefront_obj = { version = "11.0", optional = true }
 stl_io = { version = "0.8", optional = true }
 image = { version = "0.25", optional = true, default-features = false}
@@ -60,3 +60,6 @@ serde = {version= "1", optional = true, features = ["derive", "rc"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 web-sys = { version = "0.3", features = ['Document', 'Window'] }
+
+[patch.crates-io]
+gltf = {  git="https://github.com/gltf-rs/gltf", rev="a29fb756fd91913e3b6452036cdbe65a0932ac20" }
