--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ tiff = ["image/tiff"]
 tga = ["image/tga"]
 gif = ["image/gif"]
 bmp = ["image/bmp"]
+webp = ["image/webp", "gltf?/EXT_texture_webp"]
 
 svg = ["dep:resvg"]
 
@@ -59,3 +60,6 @@ serde = {version= "1", optional = true, features = ["derive", "rc"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 web-sys = { version = "0.3", features = ['Document', 'Window'] }
+
+[patch.crates-io]
+gltf = {  git="https://github.com/gltf-rs/gltf", rev="a29fb756fd91913e3b6452036cdbe65a0932ac20" }
